<resources>
    <string name="app_name">CricketScoringApp</string>
    <string name="welcome">Welcome to Cricket Scoring</string>
    <string name="start">Start</string>
    <string name="create_a_new_match">Create a New Match</string>
    <string name="match_history">Match History</string>
    <string name="enter_player_s_name">Enter player\'s name</string>
    <string name="avatar">Avatar</string>
    <string name="batting_team">Batting Team</string>
    <string name="_1">1.</string>
    <string name="batting_team_name">Batting Team Name</string>
    <string name="_2">2.</string>
    <string name="camera_icon1">camera_icon1</string>
    <string name="camera_icon2">camera_icon2</string>
    <string name="_3">3.</string>
    <string name="camera_icon3">camera_icon3</string>
    <string name="_4">4.</string>
    <string name="_5">5.</string>
    <string name="camera_icon4">camera_icon4</string>
    <string name="camera_icon5">camera_icon5</string>
    <string name="next">Next</string>
    <string name="cancel">Cancel</string>
    <string name="team_setup_toast">Please ensure all the names are filled in.</string>
    <string name="bowling_team_name">Bowling Team Name</string>
    <string name="bowling_team">Bowling Team</string>
    <string name="match_start">Match Start</string>
    <string name="back">Back</string>
    <string name="title_activity_scoring">Scoring</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="batter">Batter</string>
    <string name="runs">Runs</string>
    <string name="ballsfaced">BallsFaced</string>
    <string name="_4s">4s</string>
    <string name="_6s">6s</string>
    <string name="initNumber">-</string>
    <string name="bowler">Bowler</string>
    <string name="runslost">RunsLost</string>
    <string name="ballsdelivered">BallsDelivered</string>
    <string name="totalwicket">TotalWicket</string>
    <string name="runs_capital">RUNS</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
    <string name="eleven">11</string>
    <string name="twelve">12</string>
    <string name="thirteen">13</string>
    <string name="boundaries">BOUNDARIES</string>
    <string name="wicket_out">WICKET/OUT</string>
    <string name="bowled">Bowled</string>
    <string name="caught">Caught</string>
    <string name="candb">CAndB</string>
    <string name="lbw">LBW</string>
    <string name="hit_wicket">Hit Wicket</string>
    <string name="run_out">Run Out</string>
    <string name="extras">EXTRAS</string>
    <string name="no_ball">No Ball</string>
    <string name="bye">Bye</string>
    <string name="leg_byes">Leg Byes</string>
    <string name="wide">Wide</string>
    <string name="dead_ball">Dead Ball</string>
    <string name="confirm">Confirm</string>
    <string name="stumping">Stumping</string>
    <string name="enter_team_name">Enter team name</string>
</resources>