<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.BowlingTeamSetup">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/bowlersInfoList"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/img6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtBowlingTeamName" />

    <Button
        android:id="@+id/btnMatchStarts"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="48dp"
        android:text="@string/match_start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnBack" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="@+id/btnMatchStarts"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnMatchStarts" />

    <EditText
        android:id="@+id/txtBowlingTeamName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/enter_team_name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/bowling_team"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img6"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="24dp"
        android:src="@drawable/avatar0"
        app:layout_constraintBottom_toTopOf="@+id/img7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bowlersInfoList" />

    <ImageView
        android:id="@+id/img7"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/avatar0"
        app:layout_constraintBottom_toTopOf="@+id/img8"
        app:layout_constraintEnd_toEndOf="@+id/img6"
        app:layout_constraintStart_toStartOf="@+id/img6"
        app:layout_constraintTop_toBottomOf="@+id/img6" />

    <ImageView
        android:id="@+id/img8"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/avatar0"
        app:layout_constraintBottom_toTopOf="@+id/img9"
        app:layout_constraintEnd_toEndOf="@+id/img6"
        app:layout_constraintStart_toStartOf="@+id/img6"
        app:layout_constraintTop_toBottomOf="@+id/img7" />

    <ImageView
        android:id="@+id/img9"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/avatar0"
        app:layout_constraintBottom_toTopOf="@+id/img10"
        app:layout_constraintEnd_toEndOf="@+id/img6"
        app:layout_constraintStart_toStartOf="@+id/img6"
        app:layout_constraintTop_toBottomOf="@+id/img8" />

    <ImageView
        android:id="@+id/img10"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/avatar0"
        app:layout_constraintBottom_toBottomOf="@+id/bowlersInfoList"
        app:layout_constraintEnd_toEndOf="@+id/img6"
        app:layout_constraintStart_toStartOf="@+id/img6"
        app:layout_constraintTop_toBottomOf="@+id/img9" />

</androidx.constraintlayout.widget.ConstraintLayout>