<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.BattingTeamSetup">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/battersInfoList"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/img1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtBattingTeamName" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="48dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnCancel" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="@+id/btnNext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnNext" />

    <EditText
        android:id="@+id/txtBattingTeamName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_team_name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="24dp"
        android:text="@string/batting_team"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img1"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="24dp"
        android:src="@drawable/avatar0"
        app:layout_constraintBottom_toTopOf="@+id/img2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/battersInfoList"
        app:layout_constraintTop_toTopOf="@+id/battersInfoList" />

    <ImageView
        android:id="@+id/img2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/avatar0"
        app:layout_constraintBottom_toTopOf="@+id/img3"
        app:layout_constraintEnd_toEndOf="@+id/img1"
        app:layout_constraintTop_toBottomOf="@+id/img1" />

    <ImageView
        android:id="@+id/img3"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/avatar0"
        app:layout_constraintBottom_toTopOf="@+id/img4"
        app:layout_constraintEnd_toEndOf="@+id/img1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/img1"
        app:layout_constraintTop_toBottomOf="@+id/img2" />

    <ImageView
        android:id="@+id/img4"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/avatar0"
        app:layout_constraintBottom_toTopOf="@+id/img5"
        app:layout_constraintEnd_toEndOf="@+id/img1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/img1"
        app:layout_constraintTop_toBottomOf="@+id/img3" />

    <ImageView
        android:id="@+id/img5"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="72dp"
        android:src="@drawable/avatar0"
        app:layout_constraintBottom_toBottomOf="@+id/battersInfoList"
        app:layout_constraintEnd_toEndOf="@+id/img1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/img1"
        app:layout_constraintTop_toBottomOf="@+id/img3" />

</androidx.constraintlayout.widget.ConstraintLayout>